# jichuang_2022

./: CMakeLists.txt  README.md
LCDI3/: GetC.m  GetDataH.m  GetDataV.m  GetWeightH.m  GetWeightV.m  LCDI3.m  RCAS.m  W_HL1.mat  W_HR1.mat  W_VL1.mat  W_VU1.mat  Weight_4x.txt  my_cubic.asv  my_cubic.m  tt.m
LCDI3/Weight_V1/: W_HL2.mat  W_HR2.mat  W_VL2.mat  W_VU2.mat
LCDI3/Weight_V2/: W_HL1.mat  W_HL2.mat  W_HR1.mat  W_HR2.mat  W_VL1.mat  W_VL2.mat  W_VU1.mat  W_VU2.mat
LCDI3/data/: CH0.mat  CH1.mat  CH10.mat  CH11.mat  CH12.mat  CH13.mat  CH14.mat  CH15.mat  CH16.mat  CH17.mat  CH18.mat  CH19.mat  CH2.mat  CH20.mat  CH21.mat  CH22.mat  CH23.mat  CH24.mat  CH25.mat  CH26.mat  CH27.mat  CH28.mat  CH29.mat  CH3.mat  CH30.mat  CH31.mat  CH32.mat  CH33.mat  CH34.mat  CH35.mat  CH36.mat  CH37.mat  CH38.mat  CH39.mat  CH4.mat  CH40.mat  CH41.mat  CH42.mat  CH43.mat  CH44.mat  (+122 more)
code/: LCDI.c  LCDI.h  bmp.c  bmp.h  main.c  matrix.c  matrix.h  run.sh  weight.c  weight.h
verilog/: LCDI.v  LCDI_queue.v  define.vh  index1.v  index2.v  inter1.v  inter2.v  test_bench.sv  wave.do
verilog/ram/: W_HL1.v  W_HL2.v  W_HR1.v  W_HR2.v  W_VL1.mif  W_VL1.v  W_VL2.mif  W_VL2.v  W_VU1.mif  W_VU1.v  W_VU2.mif  W_VU2.v  blk_mem_gen_v8_4.v  blk_mem_gen_v8_4.v.bak
